[Modern Media Controls] should not include `TextTrack` when sorting `TextTrackList` if it doesn't have a desired `TextTrack::Kind` when `CaptionDisplayMode::Manual` https://bugs.webkit.org/show_bug.cgi?id=225992

Reviewed by Eric Carlson.

* page/CaptionUserPreferencesMediaAF.cpp:
(WebCore::CaptionUserPreferencesMediaAF::sortedTrackListForMenu):


Canonical link: https://commits.webkit.org/237951@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@277790 268f45cc-cd09-0410-ab3c-d52691b4dbfc